--- a/src/BalazsArva.RavenDb.Extensions.ConditionalPatch/BalazsArva.RavenDb.Extensions.ConditionalPatch.csproj
+++ b/src/BalazsArva.RavenDb.Extensions.ConditionalPatch/BalazsArva.RavenDb.Extensions.ConditionalPatch.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RavenDB.Client" Version="4.1.3" />
+  </ItemGroup>
+
 </Project>
