--- a/src/BalazsArva.RavenDb.Extensions.ConditionalPatch/BalazsArva.RavenDb.Extensions.ConditionalPatch.csproj
+++ b/src/BalazsArva.RavenDb.Extensions.ConditionalPatch/BalazsArva.RavenDb.Extensions.ConditionalPatch.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="RavenDB.Client" Version="4.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Expressions\" />
+  </ItemGroup>
+
 </Project>
