--- a/src/BalazsArva.RavenDb.Extensions.ConditionalPatch.SanityTests/BalazsArva.RavenDb.Extensions.ConditionalPatch.SanityTests.csproj
+++ b/src/BalazsArva.RavenDb.Extensions.ConditionalPatch.SanityTests/BalazsArva.RavenDb.Extensions.ConditionalPatch.SanityTests.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BalazsArva.RavenDb.Extensions.ConditionalPatch\BalazsArva.RavenDb.Extensions.ConditionalPatch.csproj" />
+  </ItemGroup>
+
 </Project>
